tests/neg/i20071/test_2.scala
// test_2.scala
// should fail, does when compiling at the same time as decoder_2.scala
def test: Unit = bar // error